--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
-APP_NAME=Laravel
+APP_NAME=Codeex
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
+FILESYSTEM_DRIVER=public
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -37,3 +38,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+DADATA_API_KEY=
